styles/style.css
.page {
    width: 1140px;
    margin-top: 133px;
}

.content {
    width: 100%;
    display: grid;
    grid-template-columns: 711px 1fr;
    gap: 30px;
}

.result__video-container {
    position: relative;
    margin-top: 78px;
    grid-column-start: 1;
    height: 386px;  
}

.result__video {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.search-form {
    position: relative;
    display: grid;
    grid-template-columns: 225px 212px 194px;
    justify-content: space-between;
}

.search-form__fieldset {
    font-weight: 400;
    font-size: 18px;
    margin-top: 16px;
    border: none;
}

.search-form__fieldset h2, span {
    font-weight: 400;
    font-size: 18px;
    color: white;
}

.search-form__fieldset-title {
    margin-bottom: 5px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.search-form__textfield {
    font-size: inherit;
    font-weight: inherit;
    color: white;
    padding-left: 0;
    width: 100%;
    height: 27px;
    border: none;
    background-color: transparent;
    border-bottom: 1px solid white ;
    border-top: 1px solid white;
}

search-form__textfield:active {
    border-right: 1px solid white ;
    border-left: 1px solid white;
}
 
.search-form__textfield::placeholder {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 400;
    color: white;
    opacity: 0.7;
    word-spacing: -3px;
}

.search-form__label {
    display: block;
}

.search-form__label:hover {
    cursor: pointer;
}

.search-form__label:hover .search-form__label-text {
    border-bottom: 1px solid white;
}

.search-form__pseudo-checkbox {
    margin-bottom: 2px;
    display: inline-block;
    width: 19px;
    height: 19px;
    vertical-align: middle;
    border: 1px solid white;
}

.search-form__label:active .search-form__pseudo-checkbox,
input[type='checkbox']:checked + .search-form__pseudo-checkbox {
    display: inline-block;
    background-color: white;
    width: 15px;
    height: 15px;
    outline: 1px solid white;
    outline-offset: 1px;
    margin: 0 2px 2px;
}

.search-form__checkbox-list {
    display: grid;
    grid-template-columns: 59px 61px 62px;
    justify-content: space-between;
}

.button {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 700;
    font-size: 18px;
    color: white;
    background-color: transparent;
    height: 34px;
    border: 1px solid white;
}

.button:hover {
    cursor: pointer;
}

.button:active {
    background-color: #545050;
}

.search-form__submit-button {
    margin: auto 0 0;
}

.title, 
.content__accent {
    font-family: Oswald, sans-serif;
    font-weight: 700;
    font-size: 75px;
    text-transform: uppercase;
    line-height: 70px;
}

.content__accent {
    color: #545050;
    margin-top: 3px;
}

.content__details{
    width: 394px;
}

.content__list {
    display: block;
    position: relative;
    width: 100%;
    height: 298px;
    overflow: scroll;
    margin-top: 26px;
}

.content__list-item:focus {
    border: 1px solid white;
}

.content__card-link {
    text-decoration: none;
    color: white
}

.content__video-card {
    display: grid;
    grid-template-columns: 200px 1fr;
    height: 107px;
    width: 100%;
    margin-bottom: 30px;
}

.content__video-card:hover {
    cursor: pointer;
}

.content__video-card:active {
    background-color: #545050;
}

.content__video-card-thumbnail {
    position: relative;
    object-fit: cover;
    width: 100%;
    height: 103px;
    margin: auto 0;
}

.content__video-card-title {
    font-family: Oswald, sans-serif;
    font-size: 30px;
    font-weight: 700;
    text-transform: uppercase;
}

.content__video-card-description {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-size: 18px;
    font-weight: 400;
}

.content__video-card:hover .content__video-card-title,
.content__video-card:hover .content__video-card-description {
    text-decoration: underline;
    text-underline-offset: 6px;
}

